SERVER-80772 Fix stage builders generating invalid plan for sort/project queries